syntax = "proto3";

option csharp_namespace = "IdentityService";

package identity;

service IdentityService {
  rpc Authenticate (LoginRequest) returns (LoginResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string refresh_token = 2;
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string farm_id = 4;
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
}